--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="flex flex-wrap justify-center items-center gap-1 sm:gap-[5px]">
                     <div class="text-center text-Flash-White text-base font-normal font-['Roboto'] leading-normal">Don't have an account?</div>
-                    <a href="{% url 'register' %}" class="text-center text-Flash-White text-base font-normal font-['Roboto'] underline leading-normal">Register Now</a>
+                    <a href="{% url 'authentication:register' %}" class="text-center text-Flash-White text-base font-normal font-['Roboto'] underline leading-normal">Register Now</a>
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
 
         $.ajax({
             type: "POST",
-            url: "{% url 'login' %}",
+            url: "{% url 'authentication:login' %}",
             data: data,
             success: function(response){
                 if(response.success){
