--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,7 +10,7 @@
 
         <!-- Navigation Links -->
         <div class="hidden items-center gap-10 md:flex">
-            <a href="#booking" class="nav-link text-base text-white/80 hover:text-white transition-colors duration-300">Booking</a>
+            <a href="{% url 'venue:venue_main' %}" class="nav-link text-base text-white/80 hover:text-white transition-colors duration-300">Venue</a>
             <a href="#event" class="nav-link text-base text-white/80 hover:text-white transition-colors duration-300">Event</a>
         </div>
 
