--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -49,7 +49,7 @@
             <div class="border-t border-gray-200 pt-4 mt-4">
                 {% if user.is_authenticated %}
                     <div class="mb-3 px-3">
-                        <div class="font-medium text-gray-800">{{ user.username }}</div>
+                        <a href="{% url 'authentication:logout' %}" class="font-medium text-gray-800 hover:text-red-700">{{ user.username }}</a>
                     </div>
                     <a href="{% url 'authentication:logout' %}" 
                        class="block w-full px-3 py-2 text-left text-base text-red-600 hover:bg-red-50 hover:text-red-700 ">
