--- a/templates/base.html
+++ b/templates/base.html
@@ -64,5 +64,6 @@
     {% block extra_js %}{% endblock extra_js %}
     {% include 'add_review.html' %}
     {% include 'edit_review.html' %}
+    {% include 'delete_review.html' %}
 </body>
 </html>
