--- a/venue/templates/venue_details.html
+++ b/venue/templates/venue_details.html
@@ -141,6 +141,11 @@
                 {% endif %}
             </div>
         {% endif %}
+
+        <div class="mt-8 lg:mt-12 opacity-0 animate-[fadeIn_0.6s_ease-out_0.6s_forwards]">
+            {% include "venue_reviews.html" %}
+        </div>
+
     </div> 
 </div>
 
