--- a/event/templates/show_event.html
+++ b/event/templates/show_event.html
@@ -8,7 +8,7 @@
 {% include 'navbar.html' %}
 
 <!-- Main Content -->
-<div class="w-full px-4 sm:px-8 lg:px-16 py-28 mt-16 bg-gradient-to-b from-Light-Navy to-Flash-White flex flex-col justify-start items-center gap-20">
+<div class="w-full px-4 sm:px-8 lg:px-16 py-28 bg-gradient-to-b from-Light-Navy to-Flash-White flex flex-col justify-start items-center gap-20">
     <div class="w-full max-w-7xl flex flex-col justify-start items-start gap-20">
         <div class="self-stretch flex flex-col lg:flex-row justify-between items-start lg:items-end gap-6">
             <div class="flex-1 max-w-[768px] flex flex-col justify-start items-start gap-4">
