--- a/landing/templates/sections/events_preview.html
+++ b/landing/templates/sections/events_preview.html
@@ -96,7 +96,7 @@
 
             </div>
             <div class="inline-flex justify-center items-center">
-                <a href="#" class="px-6 py-3 border border-[#040404] text-[#040404] text-base font-normal font-['Roboto'] leading-normal hover:bg-white/10 transition-colors">
+                <a href="{% url 'event:show_event' %}" class="px-6 py-3 border border-[#040404] text-[#040404] text-base font-normal font-['Roboto'] leading-normal hover:bg-white/10 transition-colors">
                     View all
                 </a>
             </div>
